--- a/daysim/DaySim.exe.config
+++ b/daysim/DaySim.exe.config
@@ -2,7 +2,8 @@
 <configuration>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
   <runtime>
+    <gcAllowVeryLargeObjects enabled="true" />
     <gcServer enabled="true"/>
-    <gcConcurrent enabled="false"/>
+    <gcConcurrent enabled="true"/>
   </runtime>
 </configuration>
