Changes to airport mode choice.

--- a/daysim_configuration_template.properties
+++ b/daysim_configuration_template.properties
@@ -67,6 +67,7 @@ ReportInvalidPersonDays = false
 
 # shadow price settings for work and school locations
 ShouldUseShadowPricing = $SHADOW_PRICE
+UseWorkShadowPricingForWorkAtHomeAlternative = false
 UsualWorkParcelThreshold = 5
 UsualSchoolParcelThreshold = 5
 UsualUniversityParcelThreshold = 5 
@@ -375,7 +376,7 @@ Policy_UniversalTransitFareDiscountFraction=0.0
 
 UrbanThreshold= 500
 
-PaidRideShareModeIsAvailable = false
+PaidRideShareModeIsAvailable = true
 PaidRideShare_ModeConstant = 5.00
 PaidRideShare_DensityCoefficient = 0.003
 PaidRideShare_ExtraCostPerDistanceUnit = 1.00
